@@ -5,6 +5,7 @@
 - Fixed parsing bug with empty brackets on LHS of assignment: *A () = SomeFnReturningArray()*
 - Fixed issue with **"submit file"** button not being displayed when parsing failed
 - Fixed issue with label just before the Next from a For loop
+- Fixed issue with .variable outside of a With block (this is a syntax error but would crash the converter)
 - Implemented solution for VB6 directives (#If #Else etc), by default assumes the If is true.
 
 **0.4.0.3**
